--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <a-entity position="30 0 0" rotation="0 180 0" altspace-cursor-collider="enabled: false" collada-model="#galery"></a-entity>
  <!--model39-->
 
-    <a-entity position="30 0 2" rotation="0 90 0" altspace-cursor-collider="enabled: false" collada-model="#lounge"></a-entity>
+    <a-entity position="30 0 2" rotation="0 90 0" n-mesh-collider="enabled: true; type: environment" collada-model="#lounge"></a-entity>
      <!--model40-->
     <a-entity position="30 0.02 -2" n-mesh-collider="enabled: true; type: environment" rotation="0 189 0" collada-model="#table"></a-entity>
        <!--model40-->
