--- a/index.html
+++ b/index.html
@@ -297,11 +297,25 @@
     <!--spawn base-->
     <a-cylinder src="http://i.imgur.com/tfxJXVe.jpg" height="3" radius="3" position="0 1.50 0" side="double" altspace-cursor-collider="enabled: false"></a-cylinder>
     <!--altspace sphere-->
-    <a-sphere src="http://i.imgur.com/N1VgGox.jpg" radius="0.5" position="0 2.10 -1">
+    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/alt.jpg" radius="0.5" position="0 2.10 -1">
       <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
       </a-animation>
     </a-sphere>
-
+    <!--gemini-->
+    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/murcary.jpg" n-sphere-collider="type: environment; radius: 5"radius="5" position="30 8.10 -1">
+      <a-animation attribute="rotation" dur="16000" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-sphere>
+     <!--febuary-->
+    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/Uranus2.jpg" n-sphere-collider="type: environment; radius: 5"radius="5" position="40 10.10 -1">
+      <a-animation attribute="rotation" dur="16000" fill="forwards" to="0 -360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-sphere>
+     <!--capiecorn-->
+    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/saturn.jpg" n-sphere-collider="type: environment; radius: 5"radius="5" position="30 16.10 -1">
+      <a-animation attribute="rotation" dur="16000" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-sphere>
     <!--ground2-->
     <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="-0.1 0.1 13.2" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--ground3-->
