--- a/index.html
+++ b/index.html
@@ -287,15 +287,15 @@
       <a-animation to='0 360 0' easing='linear' dur='10500' repeat='indefinite' />
     </a-octahedron>
 
-    <a-sphere position='0 40 13.5' color='#E2E8FD' radius="3" opacity="0.15"></a-sphere>
+    <a-sphere position='0 40 13.5' color='#E2E8FD' n-sphere-collider="type: environment; radius: 3"radius="3" opacity="0.15"></a-sphere>
 
     <a-cylinder position='0 38 13.3' src="https://rawgit.com/Lia021/theater-space/master/star.jpg" side="double" open-ended="true" radius='1.6' height='3'>
       <a-animation to='0 360 0' easing='linear' dur='11000' repeat='indefinite' />
     </a-cylinder>
     <!--ground-->
-    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="3" position="0 0.1 0" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="3" position="0 0.1 0" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--spawn base-->
-    <a-cylinder src="http://i.imgur.com/tfxJXVe.jpg" height="3" radius="3" position="0 1.50 0" side="double" altspace-cursor-collider="enabled: false"></a-cylinder>
+    <a-cylinder src="https://rawgit.com/Lia021/theater-space/master/spacewall.jpg" height="3" radius="3" position="0 1.50 0" side="double" altspace-cursor-collider="enabled: false"></a-cylinder>
     <!--altspace sphere-->
     <a-sphere src="https://rawgit.com/Lia021/theater-space/master/alt.jpg" radius="0.5" position="0 2.10 -1">
       <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
@@ -317,13 +317,13 @@
       </a-animation>
     </a-sphere>
     <!--ground2-->
-    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="-0.1 0.1 13.2" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-0.1 0.1 13.2" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--ground3-->
-    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="-0.1 0.1 10.2" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-0.1 0.1 10.2" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--ground4-->
-    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="-0.1 0.1 7.4" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-0.1 0.1 7.4" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--ground5-->
-    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="-0.1 0.1 4.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-0.1 0.1 4.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--image sign-->
     <a-image src="https://rawgit.com/Lia021/theater-space/master/dressup2.jpg" height="1" width="1" position="-2.95 1.90 0" side="front" rotation="0 90 0"></a-image>
     <a-image src="https://rawgit.com/Lia021/theater-space/master/me.jpg" height="1" width="1" position="2.95 1.90 0" side="front" rotation="0 -90 0"></a-image>
@@ -371,17 +371,17 @@
       <a-animation to='0 360 0' easing='linear' dur='10500' repeat='indefinite' />
     </a-octahedron>
 
-    <a-sphere position='9 15 -5.35' color='#E2E8FD' radius="3" opacity="0.15"></a-sphere>
+    <a-sphere position='9 15 -5.35' color='#E2E8FD' n-sphere-collider="type: environment; radius: 3"radius="3" opacity="0.15"></a-sphere>
 
     <a-cylinder position='9 13 -5.35' src="https://rawgit.com/Lia021/theater-space/master/star.jpg" side="double" open-ended="true" radius='1.6' height='2'>
       <a-animation to='0 360 0' easing='linear' dur='11000' repeat='indefinite' />
     </a-cylinder>
     <!--disco ground 1-->
-    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="9 0.1 -5.35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="9 0.1 -5.35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--disco ground 2-->
-    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="5.90 0.1 -4.35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="5.90 0.1 -4.35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--disco ground 1-->
-    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="3.30 0.1 -3.35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="3.30 0.1 -3.35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
 
 
     <!--hoops-->
