--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <a-animation to='0 360 0' easing='linear' dur='10500' repeat='indefinite' />
     </a-octahedron>
 
-    <a-sphere position='0 40 13.5' color='#E2E8FD' n-sphere-collider="type: environment; radius: 3"radius="3" opacity="0.15"></a-sphere>
+    <a-sphere position='0 40 13.5' color='#E2E8FD'radius="3" opacity="0.15"></a-sphere>
 
     <a-cylinder position='0 38 13.3' src="https://rawgit.com/Lia021/theater-space/master/star.jpg" side="double" open-ended="true" radius='1.6' height='3'>
       <a-animation to='0 360 0' easing='linear' dur='11000' repeat='indefinite' />
@@ -371,7 +371,7 @@
       <a-animation to='0 360 0' easing='linear' dur='10500' repeat='indefinite' />
     </a-octahedron>
 
-    <a-sphere position='9 15 -5.35' color='#E2E8FD' n-sphere-collider="type: environment; radius: 3"radius="3" opacity="0.15"></a-sphere>
+    <a-sphere position='9 15 -5.35' color='#E2E8FD'radius="3" opacity="0.15"></a-sphere>
 
     <a-cylinder position='9 13 -5.35' src="https://rawgit.com/Lia021/theater-space/master/star.jpg" side="double" open-ended="true" radius='1.6' height='2'>
       <a-animation to='0 360 0' easing='linear' dur='11000' repeat='indefinite' />
