--- a/index.html
+++ b/index.html
@@ -228,9 +228,18 @@
     <a-cylinder src="https://rawgit.com/Lia021/theater-space/master/lavender_texture.jpg"position="1 0.60 43"altspace-cursor-collider="enabled: false" height="0.90" radius="0.50"></a-cylinder>
     <a-cylinder src="https://rawgit.com/Lia021/theater-space/master/pepper.jpg"position="1 0.60 39" height="0.90"altspace-cursor-collider="enabled: false" radius="0.50"></a-cylinder>
    <!--bathtub water-->
-    <a-box src="https://rawgit.com/Lia021/theater-space/master/pepper.jpg" altspace-cursor-collider="enabled: false"depth="2.50" height="0.20" width="2.50"position="-2 0.10 38"></a-box>
-    <a-box src="https://rawgit.com/Lia021/theater-space/master/lavender_texture.jpg"altspace-cursor-collider="enabled: false" depth="2.50" height="0.20" width="2.50"position="-2 0.10 42"></a-box>
-
+    <a-box src="https://rawgit.com/Lia021/theater-space/master/maplesyrup.jpg" altspace-cursor-collider="enabled: false"depth="2.50" height="0.20" width="2.50"position="-2 0.10 38"></a-box>
+    <a-box src="https://rawgit.com/Lia021/theater-space/master/dab-texture-blue-flowers-full.jpg"altspace-cursor-collider="enabled: false" depth="2.50" height="0.20" width="2.50"position="-2 0.10 42"></a-box>
+<!--bathground-->
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 38" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 42" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <!--candyground-->
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="2.60 0.1 -26" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <!--restground-->
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="24.70 0.1 0.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+   <!--candyground-->
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-15.70 0.1 3.30" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    
     <!--canadain song-->
 
     <a-entity position="-15 1.10 6.30">
@@ -251,6 +260,19 @@
       <a-entity id="pc-BFF" n-sound="on: BFF; src:https://rawgit.com/Lia021/sound/master/BFF_-_BFF.ogg;"></a-entity>
       <a-entity id="gear-BFF" n-sound="on: BFF; src:https://rawgit.com/Lia021/sound/master/BFF%20-%20BFF.mp3;"></a-entity>
       <a-box wire="on: click; emit: BFF; targets: #pc-BFF, #gear-BFF;" depth="0.3" height="0.3" width="0.3" color="#E85248"></a-box>
+    </a-entity>
+     <!--men sing-->
+  <a-entity position="-3.50 0.2 38">
+      <a-entity id="pc-m" n-sound="on:m; src:https://rawgit.com/Lia021/sound/master/boat_dog_-_boat_dog.ogg;"></a-entity>
+      <a-entity id="gear-m" n-sound="on:m; src:https://rawgit.com/Lia021/sound/master/boat%20dog%20-%20boat%20dog.mp3;"></a-entity>
+      <a-box wire="on: click; emit: m; targets: #pc-m ,#gear-m;" depth="0.3" height="0.3" width="0.3" color="black"></a-box>
+    </a-entity>
+     <!--beautful music-->
+
+    <a-entity position="-3.50 0.2 42">
+      <a-entity id="pc-b" n-sound="on:b; src:https://rawgit.com/Lia021/sound/master/ghost_dog_-_ghost_dog.ogg;"></a-entity>
+      <a-entity id="gear-b" n-sound="on:b; src:https://rawgit.com/Lia021/sound/master/ghost%20dog%20-%20ghost%20dog.mp3;"></a-entity>
+      <a-box wire="on: click; emit: b; targets: #pc-b ,#gear-b;" depth="0.3" height="0.3" width="0.3" color="blue"></a-box>
     </a-entity>
     <!--text1-->
     <a-entity n-billboard n-text="fontSize: 3; text:Lobby" position="3 10.70 -15"></a-entity>
