--- a/index.html
+++ b/index.html
@@ -233,12 +233,42 @@
 <!--bathground-->
     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 38" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 42" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 32" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 29" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 26" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 23" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 20.20" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 17" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 14" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 11" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.65 0.1 8" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1" position="2.35 0.1 7.70" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--candyground-->
     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="2.60 0.1 -26" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+        <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="2.60 0.1 -23.30" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+        <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="2.60 0.1 -20.30" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+        <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="2.60 0.1 -17.60" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+        <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="2.60 0.1 -14.70" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+        <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="2.60 0.1 -11.40" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+        <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="2.60 0.1 -8.75" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+        <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="2.60 0.1 -6" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
     <!--restground-->
     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="24.70 0.1 0.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
-   <!--candyground-->
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="22 0.1 0.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="19.30 0.1 0.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="16.50 0.1 0.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="13.70 0.1 0.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="10.70 0.1 0.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="7.70 0.1 0.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="4.70 0.1 0.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+   <!--canada ground-->
     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-15.70 0.1 3.30" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-13 0.1 3.30" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-10 0.1 3.30" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-7 0.1 3.30" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+     <a-circle src="https://rawgit.com/Lia021/theater-space/master/spacefloor.jpg" radius="1.3" position="-4 0.1 3.30" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+
     
     <!--canadain song-->
 
