--- a/index.html
+++ b/index.html
@@ -376,18 +376,23 @@
       </a-animation>
     </a-sphere>
     <!--gemini-->
-    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/murcary.jpg" n-sphere-collider="type: environment; radius: 5" radius="5" position="-40 8.10 -1">
+    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/texture_mercury.jpg" n-sphere-collider="type: environment; radius: 5" radius="5" position="-40 8.10 -1">
       <a-animation attribute="rotation" dur="16000" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
       </a-animation>
     </a-sphere>
     <!--febuary-->
-    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/Uranus2.jpg" n-sphere-collider="type: environment; radius: 5" radius="5" position="-50 10.10 -15">
+    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/texture_uranus.jpg" n-sphere-collider="type: environment; radius: 5" radius="5" position="-50 10.10 -15">
       <a-animation attribute="rotation" dur="16000" fill="forwards" to="0 -360 0" repeat="indefinite" easing="linear">
       </a-animation>
     </a-sphere>
     <!--capiecorn-->
-    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/saturn.jpg" n-sphere-collider="type: environment; radius: 5" radius="5" position="-40 14.10 15">
+    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/texture_saturn.jpg" n-sphere-collider="type: environment; radius: 5" radius="5" position="-40 14.10 15">
       <a-animation attribute="rotation" dur="16000" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-sphere>
+      <!--may-->
+    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/venus.jpg" n-sphere-collider="type: environment; radius: 5" radius="5" position="-50 10.10 -30">
+      <a-animation attribute="rotation" dur="16000" fill="forwards" to="0 -360 0" repeat="indefinite" easing="linear">
       </a-animation>
     </a-sphere>
     <!--ground2-->
