--- a/index.html
+++ b/index.html
@@ -273,35 +273,35 @@
     <!--canadain song-->
 
     <a-entity position="-15 1.10 6.30">
-      <a-entity id="pc-canada" n-sound="on: canada; src: https://rawgit.com/Lia021/sound/master/O_Canada_-_Canada.ogg;"></a-entity>
-      <a-entity id="gear-canada" n-sound="on: canada; src: https://rawgit.com/Lia021/sound/master/O%20Canada%20-%20Canada.mp3;"></a-entity>
+      <a-entity id="pc-canada" n-sound="on: canada; src: https://cdn.rawgit.com/Lia021/sound/master/O_Canada_-_Canada.ogg;"></a-entity>
+      <a-entity id="gear-canada" n-sound="on: canada; src: https://cdn.rawgit.com/Lia021/sound/master/O%20Canada%20-%20Canada.mp3;"></a-entity>
       <a-box wire="on: click; emit: canada; targets: #pc-canada, #gear-canada;" depth="0.3" height="0.3" width="0.3" color="#A7B7BC"></a-box>
     </a-entity>
     <!--digimonsong-->
 
     <a-entity position="0.5 0.2 -32.12">
-      <a-entity id="pc-digimon" n-sound="on: digimon; src:https://rawgit.com/Lia021/sound/master/Digimon_-_Digimon.ogg;"></a-entity>
-      <a-entity id="gear-digimon" n-sound="on: digimon; src:https://rawgit.com/Lia021/sound/master/Digimon%20-%20Digimon.mp3;"></a-entity>
+      <a-entity id="pc-digimon" n-sound="on: digimon; src:https://cdn.rawgit.com/Lia021/sound/master/Digimon_-_Digimon.ogg;"></a-entity>
+      <a-entity id="gear-digimon" n-sound="on: digimon; src:https://cdn.rawgit.com/Lia021/sound/master/Digimon%20-%20Digimon.mp3;"></a-entity>
       <a-box wire="on: click; emit: digimon; targets: #pc-digimon, #gear-digimon;" depth="0.3" height="0.3" width="0.3" color="#6A92EF"></a-box>
     </a-entity>
     <!--BFFsong-->
 
     <a-entity position="32 0.2 -3">
-      <a-entity id="pc-BFF" n-sound="on: BFF; src:https://rawgit.com/Lia021/sound/master/BFF_-_BFF.ogg;"></a-entity>
-      <a-entity id="gear-BFF" n-sound="on: BFF; src:https://rawgit.com/Lia021/sound/master/BFF%20-%20BFF.mp3;"></a-entity>
+      <a-entity id="pc-BFF" n-sound="on: BFF; src:https://cdn.rawgit.com/Lia021/sound/master/BFF_-_BFF.ogg;"></a-entity>
+      <a-entity id="gear-BFF" n-sound="on: BFF; src:https://cdn.rawgit.com/Lia021/sound/master/BFF%20-%20BFF.mp3;"></a-entity>
       <a-box wire="on: click; emit: BFF; targets: #pc-BFF, #gear-BFF;" depth="0.3" height="0.3" width="0.3" color="#E85248"></a-box>
     </a-entity>
      <!--men sing-->
   <a-entity position="-3.50 0.2 38">
-      <a-entity id="pc-m" n-sound="on:m; src:https://rawgit.com/Lia021/sound/master/boat_dog_-_boat_dog.ogg;"></a-entity>
-      <a-entity id="gear-m" n-sound="on:m; src:https://rawgit.com/Lia021/sound/master/boat%20dog%20-%20boat%20dog.mp3;"></a-entity>
+      <a-entity id="pc-m" n-sound="on:m; src:https://cdn.rawgit.com/Lia021/sound/master/boat_dog_-_boat_dog.ogg;"></a-entity>
+      <a-entity id="gear-m" n-sound="on:m; src:https://cdn.rawgit.com/Lia021/sound/master/boat%20dog%20-%20boat%20dog.mp3;"></a-entity>
       <a-box wire="on: click; emit: m; targets: #pc-m ,#gear-m;" depth="0.3" height="0.3" width="0.3" color="black"></a-box>
     </a-entity>
      <!--beautful music-->
 
     <a-entity position="-3.50 0.2 42">
-      <a-entity id="pc-b" n-sound="on:b; src:https://rawgit.com/Lia021/sound/master/ghost_dog_-_ghost_dog.ogg;"></a-entity>
-      <a-entity id="gear-b" n-sound="on:b; src:https://rawgit.com/Lia021/sound/master/ghost%20dog%20-%20ghost%20dog.mp3;"></a-entity>
+      <a-entity id="pc-b" n-sound="on:b; src:https://cdn.rawgit.com/Lia021/sound/master/ghost_dog_-_ghost_dog.ogg;"></a-entity>
+      <a-entity id="gear-b" n-sound="on:b; src:https://cdn.rawgit.com/Lia021/sound/master/ghost%20dog%20-%20ghost%20dog.mp3;"></a-entity>
       <a-box wire="on: click; emit: b; targets: #pc-b ,#gear-b;" depth="0.3" height="0.3" width="0.3" color="blue"></a-box>
     </a-entity>
     <!--text1-->
