--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
   <script src="https://sdk.altvr.com/libs/altspace.js/0.28.1/altspace.min.js"></script>
-  <script src="https://cdn.rawgit.com/AltspaceVR/aframe-altspace-component/v1.4.0/dist/aframe-altspace-component.min.js"></script>
+  <script src="https://cdn.rawgit.com/AltspaceVR/aframe-altspace-component/v1.3.2/dist/aframe-altspace-component.min.js"></script>
   <script>
     altspace.getThreeJSTrackingSkeleton().then(function (skeleton) {
           window.head = skeleton.getJoint('Head');
@@ -277,7 +277,7 @@
       <a-entity id="gear-canada" n-sound="on: canada; src: https://cdn.rawgit.com/Lia021/sound/master/O%20Canada%20-%20Canada.mp3;"></a-entity>
       <a-box wire="on: click; emit: canada; targets: #pc-canada, #gear-canada;" depth="0.3" height="0.3" width="0.3" color="#A7B7BC"></a-box>
     </a-entity>
-    <!--digimonsong-->
+    <!--digimon song-->
 
     <a-entity position="0.5 0.2 -32.12">
       <a-entity id="pc-digimon" n-sound="on: digimon; src:https://cdn.rawgit.com/Lia021/sound/master/Digimon_-_Digimon.ogg;"></a-entity>
@@ -300,8 +300,8 @@
      <!--beautful music-->
 
     <a-entity position="-3.50 0.2 42">
-      <a-entity id="pc-b" n-sound="on:b; src:https://cdn.rawgit.com/Lia021/sound/master/ghost_dog_-_ghost_dog.ogg;"></a-entity>
-      <a-entity id="gear-b" n-sound="on:b; src:https://cdn.rawgit.com/Lia021/sound/master/ghost%20dog%20-%20ghost%20dog.mp3;"></a-entity>
+      <a-entity id="pc-b" n-sound="on:b; src:https://rawgit.com/Lia021/sound/master/ghost_dog_-_ghost_dog.ogg;"></a-entity>
+      <a-entity id="gear-b" n-sound="on:b; src:https://rawgit.com/Lia021/sound/master/ghost%20dog%20-%20ghost%20dog.mp3;"></a-entity>
       <a-box wire="on: click; emit: b; targets: #pc-b ,#gear-b;" depth="0.3" height="0.3" width="0.3" color="blue"></a-box>
     </a-entity>
     <!--text1-->
@@ -391,7 +391,7 @@
       </a-animation>
     </a-sphere>
       <!--may-->
-    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/venus.jpg" n-sphere-collider="type: environment; radius: 5" radius="5" position="-50 14.10 -30">
+    <a-sphere src="https://rawgit.com/Lia021/theater-space/master/venus.jpg" n-sphere-collider="type: environment; radius: 5" radius="5" position="-50 10.10 -30">
       <a-animation attribute="rotation" dur="16000" fill="forwards" to="0 -360 0" repeat="indefinite" easing="linear">
       </a-animation>
     </a-sphere>
